--- a/preise.html
+++ b/preise.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -119,7 +119,7 @@
                       
                       <div class="card-title">
                         <h3 class="mbr-plan-title">Kassa</h3>
-                        <small class="mbr-plan-subtitle">Dies ist Ihr Rechnungskreis. <br>Eine Kasse wird pro Standort benötigt.</small>
+                        <small class="mbr-plan-subtitle">Dies ist Ihr Rechnungskreis. <br>Eine Kassa wird pro Standort benötigt.</small>
                       </div>
                       <div class="card-text">
                           <div class="mbr-price">
@@ -130,7 +130,7 @@
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Preis gilt für eine Kassa</span></li><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Unlimitiert erweiterbar</span><br></li><li class="list-group-item">Einfach selbst bestimmen welche Kasse zu welchem Standort gehört</li><li class="list-group-item">Unlimitierte Anzahl an iPads</li></ul></div>
+                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Preis gilt für eine Kassa</span></li><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Unlimitiert erweiterbar</span><br></li><li class="list-group-item">Einfach selbst bestimmen welche Kassa zu welchem Standort gehört</li><li class="list-group-item">Unlimitierte Anzahl an iPads</li></ul></div>
                       
                     </div>
                 </div>
@@ -217,7 +217,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="N6GA4zOFtSNmkHa/PY8Pmh/KpyiJU6ndZC79TCKw7dOTYUIQvtDBzQETpbWTziwrmcHplplql1pHe30/MeKWxQO4OqJddH5/KcNEz8Wr6dC4a2/tt2tcabwAY17HOuua" data-form-email="true">
+                        <input type="hidden" value="MsB86O3BLaVv6vRasAVX86JJ4XTQ2v+mDWeVZZrMuVMQEVYNdGhTKpXPmxVeV8edT/2LmgXHW2cayXqJI3HbfWqyGVJSfnlpHropgvUcM13F//oGy7MyKUtcB1i+iCrP" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
