--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="tcv1n3g/Tmz+cgfEy8QjSpq908qA+sRX6LdkmrStHckKy4F8M/mtfaa+seTgpeJse4cy0wsJbX3R2rNubxPkJcfaly7GmJViyxWht8B0P59kVVIq7F+zEhcYcz2Yti1/" data-form-email="true">
+                        <input type="hidden" value="rRH6nREVqERpj5oEEFwBG42Ka2GrBAtP8KlYaVIkeiOYZfdPRLfcyl6Ucz25qIh5FrrX0z8WxNGvAgNBLHVbRd5ANbFsJ7Od0HdW4HjGeLvsK13WbGeTyMs7LCyQdwnE" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
