--- a/preise.html
+++ b/preise.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -108,7 +108,7 @@
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Zertifikatbeantragung A-Trust</span></li><li class="list-group-item">Bereitstellung der Daten für FinanzOnline</li><li class="list-group-item">Ein getrennter Rechnungskreis pro Standort wird benötigt.</li></ul></div>
+                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Für die Zertifikatbeantragung bei A-Trust</span></li><li class="list-group-item">Bereitstellung der Daten für FinanzOnline</li><li class="list-group-item">Ein getrennter Rechnungskreis pro Standort</li><li class="list-group-item">Wird direkt über Shopify abgerechnet (daher in USD).</li></ul></div>
                       
                     </div>
                 </div>
@@ -217,7 +217,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="MsB86O3BLaVv6vRasAVX86JJ4XTQ2v+mDWeVZZrMuVMQEVYNdGhTKpXPmxVeV8edT/2LmgXHW2cayXqJI3HbfWqyGVJSfnlpHropgvUcM13F//oGy7MyKUtcB1i+iCrP" data-form-email="true">
+                        <input type="hidden" value="FynrlZ4ueoSXN6kxWTSvn8ZrzYWsND2tUv6mYpQBDagg5njGWPNVsdLQ3IsynmfW3JOQuTJYBK41vG4Ua/bUNjbDCdOCnhXEgydRSxo1N6rZvi6e429BS28CUOs8BK4X" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
