create github pages

--- a/preise.html
+++ b/preise.html
@@ -97,14 +97,14 @@
                       
                       <div class="card-title">
                         <h3 class="mbr-plan-title">Einrichtung</h3>
-                        <small class="mbr-plan-subtitle">Beantragung der Zugangsdaten von A-Trust und Bereitstellung der Zertifikate für Finanz.Online.</small>
+                        <small class="mbr-plan-subtitle">Beantragung der Zugangsdaten von A-Trust und <br>Bereitstellung der Zertifikate für Finanz.Online.</small>
                       </div>
                       <div class="card-text">
                           <div class="mbr-price">
                             <span class="mbr-price-value">$</span>
                             <span class="mbr-price-figure">49</span><small class="mbr-price-term"></small>
                           </div>
-                          <small class="mbr-plan-price-desc">Einmalige Gebühr pro Kassa und Standort.<br></small>
+                          <small class="mbr-plan-price-desc">Einmalige Gebühr pro Kassa.<br></small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
@@ -119,7 +119,7 @@
                       
                       <div class="card-title">
                         <h3 class="mbr-plan-title">Kassa</h3>
-                        <small class="mbr-plan-subtitle">Dies ist Ihr Rechnungskreis. <br>Eine Kassa wird pro Standort benötigt.</small>
+                        <small class="mbr-plan-subtitle">Dies ist Ihr Rechnungskreis. <br>Eine Kassa wird pro Standort benötigt. <br></small>
                       </div>
                       <div class="card-text">
                           <div class="mbr-price">
@@ -217,7 +217,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="FynrlZ4ueoSXN6kxWTSvn8ZrzYWsND2tUv6mYpQBDagg5njGWPNVsdLQ3IsynmfW3JOQuTJYBK41vG4Ua/bUNjbDCdOCnhXEgydRSxo1N6rZvi6e429BS28CUOs8BK4X" data-form-email="true">
+                        <input type="hidden" value="XIm4dSQK9GeRcMHgF5lDGphYD+FVKVHmXsTAEb3bVnMJCl6FDAIDz1c/msD5ao7lrvELmoVYN4cQreI3YQtRpprrgQQnXg6T89bQiei0/uinZgiKN5AZpL9QmzqOE4rc" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
