--- a/preise.html
+++ b/preise.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -154,7 +154,7 @@
                     <div class="card-block">
                         <h4 class="card-title">Einmalig</h4>
                         <h5 class="card-subtitle">Einrichtung + Setup</h5>
-                        <p class="card-text">Wir verrechnen 49€ einmalig für Installation, Einrichtung und Beantragung der Zertifikate bei A-Trust. Dies ist einmal notwendig, unabhängig wieviele Kassen Sie dann betreiben.</p>
+                        <p class="card-text">Wir verrechnen 49€ einmalig für Installation, Einrichtung und Beantragung der Zertifikate bei A-Trust. Dies ist einmal notwendig pro Kassa.</p>
                         
                     </div>
                 </div>
@@ -217,7 +217,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="XIm4dSQK9GeRcMHgF5lDGphYD+FVKVHmXsTAEb3bVnMJCl6FDAIDz1c/msD5ao7lrvELmoVYN4cQreI3YQtRpprrgQQnXg6T89bQiei0/uinZgiKN5AZpL9QmzqOE4rc" data-form-email="true">
+                        <input type="hidden" value="ZkHeoiic//M/fI9Ji72D2mvzqDxpeq17tPzRe1iGqBwbgP+yNxoPjmxrI7xfgdKFjWR4Li6voWCdApzrEVvfynGyz2JVTtwDq1NJRWu6msVIQ08xdq4xLXAN8kPFJknC" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
