--- a/comingsoon.html
+++ b/comingsoon.html
@@ -76,7 +76,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>Hunderte Test-Bons, zig Testfälle, von Stornos bis Gutscheincodes, Rabatt auf den gesamten Warenkorb und Teilzahlungen. Wir haben's getestet und sind bereits mit unseren Beta-Kunden gestartet.&nbsp;</p><p><br></p><p>Offizieller geplanter Start. Freitag 7. April 2017.</p><p><br></p><p>Like on Facebook für schnellere Updates: https://www.facebook.com/Posmodule-298038257280778/</p></div>
+            <div class="col-xs-12 lead"><p>Hunderte Test-Bons, zig Testfälle, von Stornos bis Gutscheincodes, Rabatt auf den gesamten Warenkorb und Teilzahlungen. Wir haben's getestet und sind bereits mit unseren Beta-Kunden gestartet.&nbsp;</p><p><br></p><p>Offizieller geplanter Start. Freitag 7. April 2017.</p><p><br></p><p>Like on Facebook für schnellere Updates: <a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">https://www.facebook.com/Posmodule-298038257280778/</a></p></div>
         </div>
     </div>
 
@@ -99,7 +99,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Vielen Dank für das Ausfüllen.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="NEWSLETTER">
-                        <input type="hidden" value="MBWKrQT3oE1vPneXe933MPsYDk+ol0x7JODfIJFrHqGbQemRbnmMRR3v5U/rpmPx45QLfX60Q25aEo7Fvo6zEKAOfQmbN+WgheVFMsdgmUgcK8yuVMgbuIJoj4w0iinW" data-form-email="true">
+                        <input type="hidden" value="DW1mY4GKeEr7HPWOcXbvs7Y4+ZumEcz1y3+1C/0CfzK4taFqsnpDDLAqvQKJO/HQDcaKZAH4ETo5sTA6B5fVIOHzCPGGDD5lQBsZd4p+qDUoCJzT7hQJMHIER5Lmdhs1" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="max@mustermann.com" id="form2-w-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
@@ -119,7 +119,7 @@
                 <p><strong>Adresse</strong><br>Craft-IT<br>Neubaugasse 24,<br>8020 Graz<br><br><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Kontakt</strong></span></font><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong><br></strong></span></font><br>
 Email: office@posmodule.com<br>Telefon: +43 660 799 48 97<br></p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li>POS Module auf Facebook</li><br></ul></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">POS Module auf Facebook</a></li><br></ul></div>
             <div class="col-xs-12 col-md-6">
                 <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJNUuTcpw1bkcRefWyN2qaTKQ" allowfullscreen=""></iframe></div>
             </div>
