--- a/preise.html
+++ b/preise.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -217,7 +217,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="ZkHeoiic//M/fI9Ji72D2mvzqDxpeq17tPzRe1iGqBwbgP+yNxoPjmxrI7xfgdKFjWR4Li6voWCdApzrEVvfynGyz2JVTtwDq1NJRWu6msVIQ08xdq4xLXAN8kPFJknC" data-form-email="true">
+                        <input type="hidden" value="5XSJJx3+ZGrhJsGFzaj0LP8eB3CnlkCTXEb8VZb9O7lpdN/+4dQ/vootB8JROmjENbJKkvdNy1K+qpcqa3BBG9yx8XsTqe2YOtCWl+EwiutMBSxO4IrwVUK6bre/KBeT" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -266,7 +266,7 @@
                 <p><strong>Adresse</strong><br>Craft-IT<br>Neubaugasse 24,<br>8020 Graz<br><br><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Kontakt</strong></span></font><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong><br></strong></span></font><br>
 Email: office@posmodule.com<br>Telefon: +43 660 799 48 97<br></p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li>POS Module auf Facebook</li><br></ul></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">POS Module auf Facebook</a></li><br></ul></div>
             <div class="col-xs-12 col-md-6">
                 <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJNUuTcpw1bkcRefWyN2qaTKQ" allowfullscreen=""></iframe></div>
             </div>
