create github pages

--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="mCiRUiTtSxThROG7KLJDzJJ0fS1UYbRRSpecrberpNGmQk6blK6dEwo/8VJ//jgzH2cdDXbR37sNZ8LEpqwjsYaXROpAJ9Uh07KB6biReQe93vr5p/HYbNVp36NKy9hg" data-form-email="true">
+                        <input type="hidden" value="26+De2Krbub8HSuUrk9CPkNSKi+jeCHJKIsaBhYU0f3fa4VVp+M1ZwreTLRELzhNsJVW3BA8LxcqlhvBkWHgt0EaFwj1lERPxajR1btswQJpt26qziOQcDuCEuY8TFNg" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
