--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="qHxe0WSh7bM9HQwicS+0e1vG0+dP3ETh+WTQcyqbWEo/dBYeOEBAPsNB8LN0l+lVpxc7ouhtbvzHn18r9KGKefzOXf9UDxq/kyHnw2JWEXRp7zcU+S7rWWrSCtG5INW4" data-form-email="true">
+                        <input type="hidden" value="k8DDgfgB+JOY3vv2LSKNLIHvphzgXJ3dQbcO+l5LSeO85zDjfE0OGR6fEiIpaRx0tNKHMH5yKKBRr48VUJTtqLxOHlreDKUpn6woW1TWTCuj0oT64jmkMH0S2YWEh3j+" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
