--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-f">SO GEHT'S</a></li><li class="nav-item"><a class="nav-link link" href="preise.html">&nbsp;PREISE</a></li><li class="nav-item"><a class="nav-link link" href="faq.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="team.html">TEAM</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="comingsoon.html">BESTELLEN</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-f">SO GEHT'S</a></li><li class="nav-item"><a class="nav-link link" href="preise.html">&nbsp;PREISE</a></li><li class="nav-item"><a class="nav-link link" href="faq.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="team.html">TEAM</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="http://apps.shopify.com/posmodule">BESTELLEN</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="DQweYaP1NMDeAxspvGb8L9o53f1WVthvdi9f3/KaJWoSLDH3ZN0dYxEwsHRMQLt1tkFWL31NWu0MB+Zsw/nlIC1A3Mc3JPaB21+xyBxmRyqrul1FQm5JFZMrO58z9HcT" data-form-email="true">
+                        <input type="hidden" value="lk4/9mOCuNVec5pCUzUPqxYIur//IA7jype11jI57ZvuClNqLZkPuEVa1kWr6xg9Yvncfd2cjXTFb8BgoIZame98TZKKS80wYPL+QxkEqIpVdrrOj7+AxudZGUQWHW7m" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
