--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
 
     
 
@@ -255,7 +255,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="NLpXdIJKQqezydXNzZIpf9xhwCdz1s9xhvdQQMLGf9Y21lzVVKGnrVv/qpDcU1wkBNXyiXx3Yc0x6CnqBHZ1q3iApzeCxoJa2iPg9WHeW13l55fvPICqbCsEvPeDy4+E" data-form-email="true">
+                        <input type="hidden" value="LwTZhaq2AJy7ia1me4CD3zrdpKSj4sGdOhYI1yM1jSslwI/DFc2BESHk2lFEqAQaeLL0WtRgTuMOjS9F+ggBQYJw7goaAGx/EsO3r429+bBGcwLG8rA7CjBcn0XQwLn3" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
