create github pages

--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="lk4/9mOCuNVec5pCUzUPqxYIur//IA7jype11jI57ZvuClNqLZkPuEVa1kWr6xg9Yvncfd2cjXTFb8BgoIZame98TZKKS80wYPL+QxkEqIpVdrrOj7+AxudZGUQWHW7m" data-form-email="true">
+                        <input type="hidden" value="JzTpLxEDNBKRN/aLQqEruchuQyLy+8iOdS9c3Q2jKvCqmfxkEXxrZ9iffuDsNLoUAzBD6kNF+FVa7EYeAA1GIyxW6ykFLtDljZiF6aG8AScMxhO3lsLB6Z1YPTGt4B75" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
