create github pages

--- a/page6.html
+++ b/page6.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-md-padding mbr-footer footer2 mbr-after-navbar" id="contacts2-1l" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section-md-padding mbr-footer footer2 mbr-after-navbar" id="contacts2-1l" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
@@ -64,7 +64,7 @@
                 <p><strong>Adresse</strong><br>Craft-IT<br>Neubaugasse 24,<br>8020 Graz<br><br><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Kontakt</strong></span></font><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong><br></strong></span></font><br>
 Email: office@posmodule.com<br>Telefon: +43 660 799 48 97<br></p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">POS Module auf Facebook</a></li><li>Zum Addon</li><br></ul></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">POS Module auf Facebook</a></li><li>Addon bei Shopify</li><br></ul></div>
             <div class="col-xs-12 col-md-6">
                 <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJNUuTcpw1bkcRefWyN2qaTKQ" allowfullscreen=""></iframe></div>
             </div>
