create github pages

--- a/preise.html
+++ b/preise.html
@@ -102,13 +102,13 @@
                       <div class="card-text">
                           <div class="mbr-price">
                             <span class="mbr-price-value">$</span>
-                            <span class="mbr-price-figure">0</span><small class="mbr-price-term"></small>
+                            <span class="mbr-price-figure">19</span><small class="mbr-price-term"></small>
                           </div>
                           <small class="mbr-plan-price-desc">Einmalige Gebühr pro Kassa.<br></small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;"><strong>ENTFÄLLT FÜR ERSTKUNDEN BIS 17.APRIL! Danach €29.00</strong></span></li><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Für die Zertifikatbeantragung bei A-Trust</span></li><li class="list-group-item">Bereitstellung der Daten für FinanzOnline</li><li class="list-group-item">Ein getrennter Rechnungskreis pro Standort</li><li class="list-group-item">Wird direkt über Shopify abgerechnet (daher in USD).</li></ul></div>
+                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><span style="font-size: 0.875rem; line-height: 3.125rem;">Für die Zertifikatbeantragung bei A-Trust</span><br><li class="list-group-item">Bereitstellung der Daten für FinanzOnline</li><li class="list-group-item">Ein getrennter Rechnungskreis pro Standort</li><li class="list-group-item">Wird direkt über Shopify abgerechnet (daher in USD).</li></ul></div>
                       
                     </div>
                 </div>
@@ -238,7 +238,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="YVw2hS6jUNEma2TbzoGFjVXzO1VnsZ4AO/Xy9fA3dOdFNDrze9ID///XSMYobkYanvy+OvurVrxma68XEUO7xsvnYBCt5tfov+cTpSwRZpzdpPm6YVwIj28p0CbVsken" data-form-email="true">
+                        <input type="hidden" value="RsdeJYtiVTygXZk7d6LS1f8rQSz/VdEqMLn7r2eoomNqhGFJHV7qpF3PS0N0994isjCcZHatLJMPrX77YQQMOVx5fL65gvDVtOlKjpPLzLXaEB80tsyAvyppdjgDuFPs" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -287,7 +287,7 @@
                 <p><strong>Adresse</strong><br>Craft-IT<br>Neubaugasse 24,<br>8020 Graz<br><br><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Kontakt</strong></span></font><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong><br></strong></span></font><br>
 Email: office@posmodule.com<br>Telefon: +43 660 799 48 97<br></p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">POS Module auf Facebook</a></li><li>Addon bei Shopify</li><br></ul></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">POS Module auf Facebook</a></li><li><a href="http://apps.shopify.com/posmodule" target="_blank">Addon bei Shopify</a></li><br></ul></div>
             <div class="col-xs-12 col-md-6">
                 <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJNUuTcpw1bkcRefWyN2qaTKQ" allowfullscreen=""></iframe></div>
             </div>
