--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="gwPXp2edQs+7GDR4L0GG1PrDDp/RLHTiUa5+AaY3QUaz+C2StW7EvPCqT/onwXl+MyzGfYtAhlWOS7nU50Wm56yJMtAKpkaMcTl9tGPvCHQnR2c7JTEVsD1DBeqVX1T/" data-form-email="true">
+                        <input type="hidden" value="cElxK55uTS7sPSMNBjrin2JiH1JtBvJ98O1Nek0YlID88YLuNy+9mC/6id8T4BSjR0aAIR1JiAhhPWsZ3Zd0vdwUFqfxNpQ3G62th3muTbVShqc+oywd3xT5ZV7etMVJ" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
