--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-1n" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-1n" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
     </div>
@@ -244,7 +244,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="gs+HJN8LkNo+WYp8IRYtaNuQAWQl2TXIFS4vqz6aWQK5wXhM5CsISXjB/VnxeGCyQhu0BPnUSJVE+C6r5l+0Bx4fWRrNGiYR/jVYWuXyVVd+BtvYZmu4kFg3s8yZZBmE" data-form-email="true">
+                        <input type="hidden" value="Fm6bL0pPEvXNW1u/BhofqPp7bHsvLmeagBG2V2l6trBKNuXdiXKyVm7bBUw2abnMYcjEZTnF4RH3MRhObMeYBN/heeP0xUtnzjBb8h6jYWWo34Qj5fbHFLuwYzF/nXdv" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -293,7 +293,7 @@
                 <p><strong>Adresse</strong><br>Craft-IT<br>Neubaugasse 24,<br>8020 Graz<br><br><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Kontakt</strong></span></font><font color="#7c7c7c" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong><br></strong></span></font><br>
 Email: office@posmodule.com<br>Telefon: +43 660 799 48 97<br></p>
             </div>
-            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">POS Module auf Facebook</a></li><li>Addon bei Shopify</li><br></ul></div>
+            <div class="mbr-footer-content col-xs-12 col-md-3"><p class="mbr-contacts__text"><strong>Mehr</strong></p><ul><li><a href="agb.html">Allgemeine Geschäftsbedingungen</a></li><li><a href="https://www.facebook.com/Posmodule-298038257280778/" target="_blank">POS Module auf Facebook</a></li><li><a href="http://apps.shopify.com/posmodule" target="_blank">Addon bei Shopify</a></li><br></ul></div>
             <div class="col-xs-12 col-md-6">
                 <div class="mbr-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJNUuTcpw1bkcRefWyN2qaTKQ" allowfullscreen=""></iframe></div>
             </div>
