--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="59" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" data-rv-view="59" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -106,7 +106,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="Attz7PSbQyhpjO1R992loayRK0KPecqG7+O8U7vNyrZivC7qxRgc3nrX/ViF4HHsa8DvFrVotCk5chIaY4rhYv3jvsaiX+UBPqA6TAvEw5OatRDFTHjYhsLVBeSeQb1a" data-form-email="true">
+                        <input type="hidden" value="x7nVotwo6G7rM2sK4+RKilIA68JUyZcYoRn/hZlMQ+C/7+aG/p/82xdrRJ16575+e/jlUsqmuT3x2I+//A4uYWovGTSVtkyaYF76w4HNFmagstOU+BozPJgqxDJdsln7" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
