--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-1n" data-rv-view="2" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
+<section class="engine"><a href="https://mobirise.co/e">web page maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-1n" data-rv-view="2" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
     </div>
@@ -175,10 +175,14 @@
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
-                  <h3 class="mbr-section-title display-2">Das ist Shopify POS</h3>
-                  
+                  <h3 class="mbr-section-title display-2">Das ist Shopify POS<br></h3>
+                  <div class="lead">
 
-                  <div><a class="btn btn-primary" href="https://shopify.com">MEHR INFORMATIONEN</a></div>
+                    <p>Egal ob Sie im eigenen Geschäft, Online, über Social Media oder aus dem Kofferraum heraus verkaufen. Shopify ist für Sie da! <br><br>Und PosModule stellt sicher, dass das alles RKSV-konform ist.</p>
+
+                  </div>
+
+                  <div><a class="btn btn-primary" href="https://www.shopify.com/?ref=craft-it">MEHR INFORMATIONEN</a></div>
               </div>
 
 
@@ -243,7 +247,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="HLsANMGyluZWFJqTa8zQnwhMV9v0VGf85oIGgSJ5PtHtAuV3fNuxX6jUWiNU7x1zqjvxaHyXbbx3DVNOKkkZeRmAmGKmcqxghgS/Bb9/pG/tD/ANLrSU/WRQkpp69DhN" data-form-email="true">
+                        <input type="hidden" value="BZBcAJkLOsK054hy+usHrhxvrINxHVw7hcAMeaIQ4f8eXCOzhSBaIvbwJZ95C8g9TZoXbaS3d/Mg29v9TFV7JQcq2nRxVID+0aKmiX3DSzyELpH1/5M9OJiXm3tkr3ky" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
